--- a/angularjsSpringCrud/src/main/resources/templates/index.html
+++ b/angularjsSpringCrud/src/main/resources/templates/index.html
@@ -1,23 +1,37 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
+
 <meta charset="utf-8" />
 <meta name="viewport"
 	content="width=device-width, initial-scale=1.0, user-scalable=yes" />
 
 <title>Index</title>
-</head>
-<body>
-	<h1>Primeira Página AngularJS</h1>
 
-	<script
-		src="http://cdn.jsdelivr.net/webjars/angularjs/1.3.8/angular.min.js"
-		th:src="@{/webjars/angularjs/1.3.8/angular.min.js}"></script>
+
+
+</head>
+<body ng-app="firstApp">
+	<h1>AngularJS SPA CRUD</h1>
+	<div>
+		<a ui-sref="home">Index</a> <a ui-sref="listUsers">List Users</a>
+
+	</div>
+
+	<ui-view></ui-view>
+
+
+	<script th:src="@{/js/angular.js}"></script>
+
 	<script type="text/javascript" src="../js/app.js"
 		th:src="@{/js/app.js}"></script>
 	<script type="text/javascript" src="../js/LinkController.js"
 		th:src="@{/js/LinkController.js}"></script>
 	<script type="text/javascript" src="../js/LinkService.js"
 		th:src="@{/js/LinkService.js}"></script>
+	<script type="text/javascript"
+		src="http://angular-ui.github.io/ui-router/release/angular-ui-router.js"></script>
+
+	<script src="controllersJS/userController.js"></script>
 </body>
 </html>
